homework/5.kubernetes-network/postgres_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: gb5
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
        - containerPort: 5432
          protocol: 'TCP'
        volumeMounts:
          - name: postgres-persistent-storage
            mountPath: /var/lib/postgresql/data
        readinessProbe:
          failureThreshold: 3
          exec:
            command: ["pg_isready"]
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 60
        livenessProbe:
          failureThreshold: 3
          exec:
            command: ["pg_isready"]
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 60
          initialDelaySeconds: 10
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgresvol
