homework/5.kubernetes-network/redmine_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-deployment
  namespace: gb5
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
          protocol: 'TCP'
