homework/5.kubernetes-network/service_db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: gb5
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
