homework/5.kubernetes-network/service_rm.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine
  namespace: gb5
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: redmine
  type: ClusterIP
